Billboard particles not displaying in Eevee viewport, render #61695

Closed
opened 2019-02-19 02:41:24 +01:00 by Benjamin Humpherys · 8 comments

System Information
Operating system: Windows 10 x64
Graphics card: R9 280X

Blender Version
2.80 build 790cb7799d

Billboard particles do not show up in eevee. Setting the rendering mode to object, halo, point, or other settings works fine, but billboards do not display in viewport or rendered. See attached file:
billboard_particles.blend

**System Information** Operating system: Windows 10 x64 Graphics card: R9 280X **Blender Version** 2.80 build 790cb7799dcf Billboard particles do not show up in eevee. Setting the rendering mode to object, halo, point, or other settings works fine, but billboards do not display in viewport or rendered. See attached file: [billboard_particles.blend](https://archive.blender.org/developer/F6654362/billboard_particles.blend)

Added subscriber: @brhumphe

Added subscriber: @brhumphe
Clément Foucault was assigned by Sebastian Parborg 2019-02-19 14:06:16 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

This option and associated code could be removed. It was only supported by Blender internal which is no longer available.

Billboard particle support in Eevee (and maybe Cycles) could be useful, but would not consider missing support for that a bug in itself. Mainly having an option that does nothing.

This option and associated code could be removed. It was only supported by Blender internal which is no longer available. Billboard particle support in Eevee (and maybe Cycles) could be useful, but would not consider missing support for that a bug in itself. Mainly having an option that does nothing.

That’s a pity. I knew cycles didn’t support them but assumed that eevee did since the option was still present. If it’s not supported at all the option should under be removed from the UI.

The biggest feature I was hoping to use from billboard particles was the ability to animate them using a sprite sheet. Arguably that’s actually a distinct feature from a particle that always faces the camera, though they go well together. Something to consider for the future, but today it’s just a UI bug.

That’s a pity. I knew cycles didn’t support them but assumed that eevee did since the option was still present. If it’s not supported at all the option should under be removed from the UI. The biggest feature I was hoping to use from billboard particles was the ability to animate them using a sprite sheet. Arguably that’s actually a distinct feature from a particle that always faces the camera, though they go well together. Something to consider for the future, but today it’s just a UI bug.

So what should I do concerning this? Remove the option from the code completely? Thus breaking old file? Edit do_version to change existing particle system type to None?

So what should I do concerning this? Remove the option from the code completely? Thus breaking old file? Edit do_version to change existing particle system type to None?

Yes, remove the option from the code and do a version patch to set the type to None.

As long as we don't support this old files will break, any files with Blender Internal materials are broken anyway.

Yes, remove the option from the code and do a version patch to set the type to None. As long as we don't support this old files will break, any files with Blender Internal materials are broken anyway.

This issue was referenced by efdde88dfc

This issue was referenced by efdde88dfc9501764d96cf5b33e2141a86ba44c9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61695
No description provided.