source/blender/blenkernel/BKE_particle.h
@@ -172,19 +172,6 @@ typedef struct ParticleTask {
 	int begin, end;
 } ParticleTask;
 
-typedef struct ParticleBillboardData {
-	struct Object *ob;
-	float vec[3], vel[3];
-	float offset[2];
-	float size[2];
-	float tilt, random, time;
-	int uv[3];
-	int lock, num;
-	int totnum;
-	int lifetime;
-	short align, uv_split, anim, split_offset;
-} ParticleBillboardData;
-
 typedef struct ParticleCollisionElement {
 	/* pointers to original data */
 	float *x[3], *v[3];
@@ -391,7 +378,6 @@ void psys_thread_context_free(struct ParticleThreadContext *ctx);
 void psys_tasks_create(struct ParticleThreadContext *ctx, int startpart, int endpart, struct ParticleTask **r_tasks, int *r_numtasks);
 void psys_tasks_free(struct ParticleTask *tasks, int numtasks);
 
-void psys_make_billboard(ParticleBillboardData *bb, float xvec[3], float yvec[3], float zvec[3], float center[3]);
 void psys_apply_hair_lattice(struct Depsgraph *depsgraph, struct Scene *scene, struct Object *ob, struct ParticleSystem *psys);
 
 /* particle_system.c */
